--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -46,31 +46,31 @@ jobs:
       env:
         CI: true
 
-  Build-and-Push-Docker-Image:
-    runs-on: ubuntu-latest
-    needs: test
-    name: Docker Build, Tag, Push
+  # Build-and-Push-Docker-Image:
+  #   runs-on: ubuntu-latest
+  #   needs: test
+  #   name: Docker Build, Tag, Push
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Download built artifact
-      uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: Read Docker Image Identifiers
-      run: echo ::set-env name=IMAGE_REPOSITORY::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
-    - name: Build container image
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
-        registry: docker.pkg.github.com
-        repository: ${{ env.IMAGE_REPOSITORY }}//tic-tac-toe
-        tag_with_sha: true
-        tag_with_ref: false
-        path: .
-        always_pull: false
-        add_git_labels: false
-        push: true
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@v1
+  #   - name: Download built artifact
+  #     uses: actions/download-artifact@main
+  #     with:
+  #       name: webpack artifacts
+  #       path: public
+  #   - name: Read Docker Image Identifiers
+  #     run: echo ::set-env name=IMAGE_REPOSITORY::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
+  #   - name: Build container image
+  #     uses: docker/build-push-action@v1
+  #     with:
+  #       username: ${{github.actor}}
+  #       password: ${{secrets.GITHUB_TOKEN}}
+  #       registry: docker.pkg.github.com
+  #       repository: ${{ env.IMAGE_REPOSITORY }}//tic-tac-toe
+  #       tag_with_sha: true
+  #       tag_with_ref: false
+  #       path: .
+  #       always_pull: false
+  #       add_git_labels: false
+  #       push: true
