--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -1,11 +1,9 @@
 # This file wont do us much good in this location, make sure you change the path as directed to continue!
+# Random comment
 
 name: Docker CD
 
-on:
-  push:
-    paths:
-    - "**Dockerfile**"
+on: push
 
 jobs:
   build:
